chore: update for JDK 21 or above